fix layout top encryption spacing

--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -94,7 +94,7 @@ color palette
 
 [style-input]{
     font-weight: 300;
-    font-size: 80%;
+    font-size: 90%!important;
     letter-spacing: 1px;
     line-height: 109%;
 }
